--- a/static/events.html
+++ b/static/events.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Square Lively Boar</title>
+      <title>LK - Veranstaltungstechnik</title>
     <meta property="og:title" content="Square Lively Boar" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
