Update contact link to use absolute path
Changed the 'Kontakt' navigation link from a hash-based anchor to an absolute path ('/#contact') to ensure correct navigation from the events page.

--- a/static/events.html
+++ b/static/events.html
@@ -109,7 +109,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="#contact">
+                      <a href="/#contact">
                         <div class="navigation-link"><span>Kontakt</span></div>
                       </a>
                     </li>
