Update navigation links to root path
Changed navigation links in events.html and index.html from 'index.html' to '/'. This ensures that clicking the brand or navigation links always redirects to the site root, improving navigation consistency.

--- a/static/events.html
+++ b/static/events.html
@@ -85,7 +85,7 @@
             </div>
             <nav class="navigation-root">
               <div class="navigation-container">
-                <a href="index.html">
+                <a href="/">
                   <div
                     aria-label="LK Veranstaltungstechnik Home"
                     class="navigation-brand"
