--- a/static/index.html
+++ b/static/index.html
@@ -85,7 +85,7 @@
             </div>
             <nav class="navigation-root">
               <div class="navigation-container">
-                <a href="index.html">
+                <a href="/">
                   <div
                     aria-label="LK Veranstaltungstechnik Home"
                     class="navigation-brand"
@@ -160,7 +160,7 @@
             </nav>
             <div id="mobileOverlay" class="navigation-mobile-overlay">
               <div class="navigation-overlay-header">
-                <a href="index.html">
+                <a href="/">
                   <div class="navigation-brand">
                     <div class="navigation-logo-icon">
                       <svg
