Comment out mobile menu resize event listener
The window resize event listener that closed the mobile menu on larger screens has been commented out. This may be to prevent automatic menu closure when resizing the window, possibly improving user experience or addressing a bug.

--- a/static/index.html
+++ b/static/index.html
@@ -291,11 +291,11 @@
                         }
                       })
 
-                      window.addEventListener("resize", () => {
-                        if (window.innerWidth > 767 && mobileOverlay.classList.contains("is-active")) {
-                          closeMenu()
-                        }
-                      })
+                      //window.addEventListener("resize", () => {
+                      //  if (window.innerWidth > 767 && mobileOverlay.classList.contains("is-active")) {
+                      //    closeMenu()
+                      //  }
+                      //})
                     })()
                   });
                 </script>
