Update navigation and hero text for German localization
Refactored navigation markup in events.html for improved structure and consistency. Updated hero section and mobile overlay text to use German phrase 'Große Technik für kleine Events' instead of English, ensuring localization across both events.html and index.html.

--- a/static/index.html
+++ b/static/index.html
@@ -228,8 +228,7 @@
                     </div>
                   </a>
                   <p class="section-content">
-                    Professional event lighting for private concerts &amp;
-                    theatre.
+                    Große Technik für kleine Events
                   </p>
                 </div>
               </div>
