Update mobile nav button to 'Kontakt' and link to contact
Changed the mobile navigation button text from 'Get a Quote' to 'Kontakt' and updated its link to point to the contact section ('/#contact') in both events.html and index.html.

--- a/static/events.html
+++ b/static/events.html
@@ -222,9 +222,9 @@
                               </li>
                           </ul>
                           <div class="navigation-mobile-actions">
-                              <a href="index.html">
+                              <a href="/#contact">
                                   <div class="btn-lg btn-primary btn">
-                                      <span>Get a Quote</span>
+                                      <span>Kontakt</span>
                                   </div>
                               </a>
                               <p class="section-content">
