Replace hero image with local photo
Updated the hero section image in index.html to use a locally hosted photo (20251212_160608.jpg) instead of an external URL. Added the new image to the static/public directory.

--- a/static/index.html
+++ b/static/index.html
@@ -324,7 +324,7 @@
               <div class="hero-bento-cell">
                 <img
                   alt="Concert Stage Lighting"
-                  src="https://images.pexels.com/photos/2177813/pexels-photo-2177813.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1500"
+                  src="/public/20251212_160608.jpg"
                   class="bento-image"
                 />
                 <div class="bento-scrim">
