Add equipment (gear) page and update navigation
Introduced a new /gear route in app.py with authentication, added gear.html to display equipment details, updated navigation links in events.html and index.html to point to the new gear page, and added a related image. Also updated style.css for layout adjustments.

--- a/static/index.html
+++ b/static/index.html
@@ -114,7 +114,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="404.html">
+                      <a href="/gear">
                         <div class="navigation-link">
                           <span>Equipment</span>
                         </div>
@@ -202,7 +202,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="404.html">
+                        <a href="/gear">
                             <div class="navigation-mobile-link">
                                 <span>Equipment</span>
                             </div>
@@ -312,7 +312,7 @@
                       <span>Veranstaltungskalender</span>
                     </div>
                   </a>
-                  <a href="404.html">
+                  <a href="/gear">
                     <div class="btn-lg btn-outline btn">
                       <span>Technik ansehen</span>
                     </div>
@@ -492,7 +492,7 @@
                     <span>Individuelle Lichtlösungen</span>
                   </li>
                 </ul>
-                  <a href="404.html">
+                  <a href="/gear">
                       <div class="btn-lg btn-primary">
                           <span>Verfügbare Technik ansehen</span>
                       </div>
