--- a/static/events.html
+++ b/static/events.html
@@ -114,7 +114,7 @@
                                       </a>
                                   </li>
                                   <li>
-                                      <a href="404.html">
+                                      <a href="/gear">
                                           <div class="navigation-link">
                                               <span>Equipment</span>
                                           </div>
@@ -202,7 +202,7 @@
                                   </a>
                               </li>
                               <li>
-                                  <a href="404.html">
+                                  <a href="/gear">
                                       <div class="navigation-mobile-link">
                                           <span>Equipment</span>
                                       </div>
