Update warning and info texts for clarity
Revised the sound level warning to clarify potential effects on sensitive individuals or children. Updated the gastronomy section to specify that only cash payments are accepted. Removed the section about individual event-specific information.

--- a/static/warning_and_info.html
+++ b/static/warning_and_info.html
@@ -55,7 +55,7 @@
                 <div class="tag-icon bg-warn">🔊</div>
                 <div>
                     <h3 class="text-xl font-bold mb-2">Hoher Schalldruckpegel</h3>
-                    <p class="text-slate-400 text-sm">Während der Show werden hohe Lautstärken erreicht. Wir empfehlen empfindlichen Personen oder Kindern das Tragen eines Gehörschutzes. Oft halten wir kostenlose Ohrstöpsel am Einlass bereit.</p>
+                    <p class="text-slate-400 text-sm">Während der Show werden hohe Lautstärken erreicht. Dies kann bei empfindlichen Personen oder Kindern eventuell zu Beeinträchtigungen führen.</p>
                 </div>
             </div>
 
@@ -94,15 +94,7 @@
                 <div class="tag-icon bg-info">🍹</div>
                 <div>
                     <h3 class="text-xl font-bold mb-2">Gastronomie</h3>
-                    <p class="text-slate-400 text-sm">Vor Ort gibt es ein Angebot an Speisen und/oder Getränken. Die Bezahlung erfolgt je nach Location bar oder bargeldlos.</p>
-                </div>
-            </div>
-
-            <div class="bento-card flex gap-6 items-start">
-                <div class="tag-icon bg-info">ℹ️</div>
-                <div>
-                    <h3 class="text-xl font-bold mb-2">Individuelle Hinweise</h3>
-                    <p class="text-slate-400 text-sm">Zusätzliche, eventspezifische Informationen werden direkt in der Event-Übersicht unter diesem Symbol angezeigt.</p>
+                    <p class="text-slate-400 text-sm">Vor Ort gibt es ein Angebot an Speisen und/oder Getränken. Die Bezahlung ist ausschließlich mit Bargeld möglich.</p>
                 </div>
             </div>
 
